--- a/whu-thesis-demo.tex
+++ b/whu-thesis-demo.tex
@@ -3,6 +3,23 @@
 %% Created by WHUTUG
 
 \documentclass{whu-thesis}
+
+\usepackage{listings}
+\usepackage{float}
+\usepackage{algpseudocode}
+\usepackage{caption}
+\usepackage{hyperref}
+\usepackage{pifont}
+
+\DeclareCaptionFormat{myformat}{脚本 \thechapter.\arabic{lstlisting}  #3}
+\captionsetup[lstlisting]{format=myformat}
+
+\hypersetup{pdfauthor={Your Name},%
+  pdftitle={Your Title},%
+  pdfproducer={Your Name},%
+  pdfcreator={Your Name}
+}
+
 \whusetup
   {
     info               =
@@ -16,6 +33,7 @@
         subject        = {学科},
         major          = {专业名称},
         advisor        = {教师姓名 , 职称},
+        advisor*        = {Advisor Name},
         direction      = {研究方向},
         % date           = {2021/5},
         keywords       = {关键词 1 , 关键词 2 , 关键词 3 , 关键词 4 , 一个非常非常，非常非常长——的关键词 5},
@@ -39,10 +57,12 @@
       }
   }
 
+\renewcommand\bibfont{\zihao{5}}
+
 \begin{document}
 %%----------- 主体部分 ----------- %%
-\include{pages/chapter1}
-\include{pages/chapter2}
-\include{pages/chapter3}
-\include{pages/chapter4}
+\input{pages/chapter1}
+\input{pages/chapter2}
+\input{pages/chapter3}
+\input{pages/chapter4}
 \end{document}
